# llm-registry

./: .coverage  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: publish.yml  test.yml
src/llm_capability_discovery/: __init__.py  cli.py  models.py  registry.py  repository.py  utils.py
src/llm_capability_discovery/data/: models.json
src/llm_registry/: __init__.py  cli.py  exceptions.py  models.py  registry.py  repository.py  utils.py
src/llm_registry/data/: models.json
src/tests/: conftest.py  test_catalog_integrity.py  test_cli.py  test_integration.py  test_models.py  test_registry.py  test_repository.py  test_utils.py
