[project]
name = "llm-registry"
version = "0.4.3"
description = "A centralized registry for discovering and managing LLM model capabilities. Track model features, costs, and limitations across providers like OpenAI and Anthropic. Supports both verified model definitions and user-managed entries with local storage."
readme = "README.md"
authors = [
    { name = "Yaman Ahlawat", email = "yaman@outlook.com" },
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "typer>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/yamanahlawat/llm-registry"
Issues = "https://github.com/yamanahlawat/llm-registry/issues"

[project.scripts]
llm-registry = "llm_registry.cli:app"
llmr = "llm_registry.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "ipython>=9.5.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "tomli-w>=1.2.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
