[project]
name = "llm-registry"
version = "0.4.7"
description = "A centralized registry for discovering and managing LLM model capabilities. Track model features, costs, and limitations across providers like OpenAI and Anthropic. Supports both verified model definitions and user-managed entries with local storage."
readme = "README.md"
authors = [
    { name = "Yaman Ahlawat", email = "yaman@outlook.com" },
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yamanahlawat/llm-registry"
Issues = "https://github.com/yamanahlawat/llm-registry/issues"

[project.scripts]
llm-registry = "llm_registry.cli:app"
llmr = "llm_registry.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "ipython>=9.7.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.4.0",
    "tomli-w>=1.2.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
